# MatlabHelper

./: .gitignore  CONTRIBUTING.md  README.md  copilot-instructions.md  pyproject.toml  requirements.txt  setup_cx_freeze.py
.github/workflows/: ci-cd.yml
docs/source/: conf.py  index.rst
matlab/: chainDH.m  chain_demo.m  dh.m  dh_utils.m  fk_demo.m  fkine.m  follow_path.m  ik_iterative.m  ik_planar.m  ik_planar_demo.m  interpolate_pose.m  jacobian.m  jacobian_demo.m  jacobian_geometric.m  lecture00_basics.m  main_demo.m  manipulability.m  orientation_utils.m  path_planning.m  rotX.m  rotY.m  rotZ.m  rotm2rpy.m  rpy2rotm.m  singularity_demo.m  tprint.m  transl.m  utilities.m  visualize_transformation.m
roadmap/: GR.txt
scripts/: setup_env.ps1  tmp_check.py
seminars/: seminar_1.m  seminar_2.m  seminar_3_explaination.txt  seminar_4_explaination.txt  seminar_4_singularities.m  vis_sing_map.m
src/: main.py
src/app/: controller.py
src/config/: constants.py
src/models/: __init__.py  app_state.py  matlab_window.py  typing_settings.py
src/services/: file_service.py  injector_service.py  keyboard_monitor.py  window_service.py
src/ui/: main_window.py
src/utils/: app_state_store.py
tasks/: lecture01_tasks.m  lecture02_tasks.m  lecture03_tasks.m  lecture04_tasks.m  lecture05_tasks.m  lecture06_tasks.m  lecture07_tasks.m  lecture08_tasks.m
tests/: conftest.py  test_controller.py  test_file_service.py  test_injector.py  test_keyboard_monitor.py  test_main.py  test_window_service.py
