[project]
name = "matlabhelper"
version = "0.1.0"
description = "A PyQt-based assistant for teaching MATLAB courses via automated editor content injection."
authors = [{name = "ChubbyChuckles", email = "christian.rickert.1989@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "PyQt6",
    "pywin32==307; platform_system == 'Windows'",
    "keyboard",
    "pyperclip",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-mock",
    "pytest-timeout",
    "cx-Freeze==8.4.1",
]

[project.urls]
Homepage = "https://github.com/ChubbyChuckles-Inc/MatlabHelper"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
exclude = [
    ".venv",
    ".pytest_cache",
    "bootstrap.py",
    "docs/source/conf.py",
]

[tool.pylint]
ignore = [
    "docs/source/conf.py",
    "tests/__init__.py",
    "src/__init__.py",
    "src/config/",
    "bootstrap.py",
]
ignore-patterns = [
    ".*_generated\\.py$",
]
max-line-length = 100
disable = [
    "C0114",  # Missing module docstring
    "F0401",  # Unable to import (import-error)
    "E0611",  # No name in module (no-name-in-module)
]

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
disable_error_code = [
    "import",
]
exclude = [
    "docs/source/conf.py",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings --timeout=15 --timeout-method=thread"
